# regmonkey

./: .gitignore  README.ja.md  README.md  README.zh.md  pyproject.toml
examples/: example.py
regmonkey/: __init__.py  stats.py
