[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regmonkey"
version = "0.1.0"
description = "A smart and lightweight toolkit for regression modeling, statistical summaries, and Excel annotations."
readme = "README.md"
license = {text = "MIT"}

authors = [
  {name = "qingrui", email = "qingrui.econ@gmail.com"}
]

dependencies = [
  "pandas >=1.0",
  "numpy >=1.18",
  "openpyxl >=3.0",
  "statsmodels >=0.13"
]

requires-python = ">=3.7"

keywords = [
  "regression",
  "statistics",
  "excel",
  "data-analysis",
  "summary",
  "dummy-variable"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]